# VisionFlow

./: .dockerignore  .env.example  .env_template  .eslintrc.json  .git-commit-message.txt  .gitignore  .mcp.json.bak.20250906_202344  .tempenv  502_ERROR_DIAGNOSIS.md  502_FIXED.md  @task.md  AGENTS.md  AGENT_CONFORMANCE_UPDATE.md  AGENT_CONTROL_ENHANCEMENTS.md  BOTS_HANDLER_FIX_SUMMARY.md  BOTS_VISUALIZATION_DEBUG.md  BUILD_FIX_SUMMARY.md  BUILD_FORWARD_FIXES.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE_FLOW_INTEGRATION_PLAN.md  CLIENT_INTERFACE_UPGRADE_PLAN.md  CODEBASE_ISSUES_AUDIT.md  CODE_PRUNING_PLAN.md  COLLABORATION_ANALYSIS_SHAJARA_UL_DURAR.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_SUCCESS.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_YAML_FIX_SUMMARY.md  COMPLETION_SUMMARY.md  CONTAINER_COMMUNICATION_FIX.md  CONTROL-CENTER-SUMMARY.md  CORE_TODO.md  CTH.md  CUDA_COMPILATION_ISSUE.md  Cargo.toml  Cargo.toml.bak  Cargo.toml.logging_deps  Cargo.toml.patch  Cargo.toml.tcp.patch  (+271 more)
.agentic-qe/: learning-config.json  memory.db-shm
.doc-alignment-reports/: archive-report.json  ascii-report-scoped.json  link-report-scoped.json  mermaid-report-scoped.json  stubs-report-scoped.json  stubs-report.json
.qlty/: qlty.toml
.swarm/: memory.db  memory.db-shm
LICENSES/: README.md
Metaverse-Ontology/: .gitignore  Avatar.md  CONTRIBUTING.md  DigitalTwin.md  ETSIDomainClassification.md  OntologyDefinition.md  PropertySchema.md  README.md
SAND-docs/: README.md  knowledge-app-integration-plan.md  knowledge-app-sand-innovations.md  knowledge-app-technical-specs.md
UnityProject/: README.md
agent-control-interface/: .env.example  ANALYSIS.md  ARCHITECTURE_SUMMARY.md  DESIGN.md  DUAL_GRAPH_FIX.md  IMPLEMENTATION.md  INTEGRATION_FIX.md  README.md  RUST_CLIENT_FIX.rs  diagnose-connection.sh  monitor.sh  package-lock.json  package.json  setup.sh  start.sh  stop.sh  validate.sh
archive/: 502_ERROR_DIAGNOSIS.md  CLIENT_INTERFACE_UPGRADE_PLAN.md  PIPELINE_ANALYSIS.md  UNIFIED_DOCKER_SETUP.md
autoschema_kg_rust/: Cargo.toml  README.md  deny.toml  task.md
autoschema_kg_rust/.github/workflows/: ci.yml
autoschema_kg_rust/benches/: performance_benchmarks.rs
autoschema_kg_rust/docs/: API.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  MIGRATION.md  PERFORMANCE.md
autoschema_kg_rust/examples/: basic_usage.rs
autoschema_kg_rust/examples/data/: relationships.csv  sample.csv
autoschema_kg_rust/kg_construction/: Cargo.toml
autoschema_kg_rust/kg_construction/examples/: concept_generation_example.rs
autoschema_kg_rust/kg_construction/neo4j/: batch.rs  connection.rs  error.rs  hooks.rs  index.rs  mod.rs  models.rs  operations.rs  query_builder.rs
autoschema_kg_rust/kg_construction/src/: batch_processing.rs  chunker.rs  concept_generation.rs  concept_to_csv.rs  concepts.rs  config.rs  csv_utils.rs  data_loading.rs  dataset.rs  error.rs  extractor.rs  extractors.rs  graph.rs  graph_traversal.rs  lib.rs  llm_integration.rs  loader.rs  main.rs  ml_inference.rs  models.rs  neo4j_integration.rs  parser.rs  pipeline.rs  processors.rs  prompts.rs  statistics.rs  triple.rs  types.rs
autoschema_kg_rust/kg_construction/tests/: integration_test.rs  unit_tests.rs
autoschema_kg_rust/llm_generator/: Cargo.toml  README.md
autoschema_kg_rust/llm_generator/examples/: basic_usage.rs
autoschema_kg_rust/llm_generator/src/: batch.rs  error.rs  generator.rs  lib.rs  prompt.rs  rate_limit.rs  response.rs  retry.rs  token_counter.rs  usage.rs
autoschema_kg_rust/llm_generator/src/providers/: anthropic.rs  local.rs  mod.rs  openai.rs
autoschema_kg_rust/llm_generator/tests/: integration_tests.rs  unit_tests.rs
autoschema_kg_rust/llm_generator/tests/common/: mod.rs
autoschema_kg_rust/retriever/: Cargo.toml
autoschema_kg_rust/retriever/src/: cache.rs  config.rs  context.rs  embeddings.rs  engines.rs  error.rs  graph.rs  lib.rs  metrics.rs  query.rs  ranking.rs  retriever.rs  search.rs  utils.rs
autoschema_kg_rust/retriever/tests/: unit_tests.rs
autoschema_kg_rust/scripts/: run_tests.sh  setup_test_env.sh
autoschema_kg_rust/tests/: integration_tests.rs  property_tests.rs
autoschema_kg_rust/tests/common/: fixtures.rs  generators.rs  helpers.rs  mocks.rs  mod.rs
autoschema_kg_rust/utils/: Cargo.toml
autoschema_kg_rust/utils/benches/: processing_benchmarks.rs
autoschema_kg_rust/utils/scripts/: setup_hooks.sh
autoschema_kg_rust/utils/src/: config.rs  csv_processing.rs  errors.rs  file_io.rs  graph_conversion.rs  hash_utils.rs  hashing.rs  json_processing.rs  lib.rs  logging.rs  markdown_processing.rs  preprocessing.rs  text_cleaning.rs  text_processing.rs  validation.rs
autoschema_kg_rust/utils/tests/: integration_tests.rs  sample_text.txt  unit_tests.rs
autoschema_kg_rust/vectorstore/: Cargo.toml
autoschema_kg_rust/vectorstore/benches/: vector_operations.rs
autoschema_kg_rust/vectorstore/examples/: comprehensive_example.rs
autoschema_kg_rust/vectorstore/src/: embedding.rs  error.rs  hooks.rs  index.rs  lib.rs  metrics.rs  operations.rs  search.rs  storage.rs
client/: .env.example  .npmrc  PERFORMANCE_ANALYSIS_REPORT.md  README-DEBUG.md  TELEMETRY-STREAM-INTEGRATION.md  check_edge_endpoints.js  edge-endpoint-solution.md  edge-topology-analysis.js  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  test-graph-styling.html  three-unified.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
client/crates/scene-effects/: Cargo.toml
client/crates/scene-effects/src/: atmosphere.rs  energy_wisps.rs  lib.rs  noise.rs  particles.rs
config/: livekit.yaml
data/: dev_config.toml  markdown  ontology_physics.toml.example  settings.db.backup-20251023-121133  settings.yaml  (+1 more)
migration/: 003_add_inference_cache.sql  COMPLETION_REPORT.md  Cargo.toml  README.md  control_center_schema.sql  schema_migration_plan.md  unified_schema.sql
migration/src/: export_knowledge_graph.rs  export_ontology.rs  import_to_unified.rs  transform_to_unified.rs  verify_migration.rs
website/wasm-mesh-hero/: Cargo.toml
website/wasm-mesh-hero/src/: lib.rs
(+8609 files in other folders)
