[workspace]
members = [
    "llm_generator",
    "utils",
    "vectorstore"
]
# Temporarily excluded due to dependency issues:
# "kg_construction",
# "retriever",
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["AutoSchemaKG Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/autoschema/kg-rust"
documentation = "https://docs.rs/autoschema-kg-rust"
keywords = ["llm", "knowledge-graph", "ai", "nlp", "semantic-search"]
categories = ["text-processing", "science", "algorithms"]

# Workspace-wide test configuration
[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
regex = "1.0"
rayon = "1.8"
csv = "1.3"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
rand = "0.8"
indexmap = "2.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"

# ML and vector dependencies
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
hf-hub = "0.3"
tokenizers = "0.15"

# Test dependencies
proptest = "1.4"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
wiremock = "0.5"
rstest = "0.18"
test-case = "3.3"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
tempfile = "3.8"
insta = "1.34"
serial_test = "3.0"
