[package]
name = "visionflow-migration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "export_knowledge_graph"
path = "src/export_knowledge_graph.rs"

[[bin]]
name = "export_ontology"
path = "src/export_ontology.rs"

[[bin]]
name = "transform_to_unified"
path = "src/transform_to_unified.rs"

[[bin]]
name = "import_to_unified"
path = "src/import_to_unified.rs"

[[bin]]
name = "verify_migration"
path = "src/verify_migration.rs"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
anyhow = "1"
chrono = "0.4"
