[package]
name = "llm_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
backoff = { version = "0.4", features = ["tokio"] }
governor = "0.6"
nonzero_ext = "0.3"
tiktoken-rs = "0.5"
base64 = "0.22"
tokio-util = "0.7"
futures = "0.3"
once_cell = "1.19"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
rstest = { workspace = true }
test-case = { workspace = true }
fake = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }