[package]
name = "retriever"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
indexmap = { workspace = true }

# Vector operations and similarity
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
hnsw = "0.11"
faiss = { version = "0.12", optional = true }

# Async and parallelism
futures = "0.3"
# stream-flatten = "0.3"  # Package not found
async-trait = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }
dashmap = "5.5"

# Graph algorithms
petgraph = "0.6"

# Text processing
unicode-segmentation = "1.10"
stemmer = "0.3"
stop-words = "0.8"
regex = { workspace = true }

# Metrics and monitoring
prometheus = "0.13"

# Configuration
config = "0.14"
num_cpus = "1.16"
chrono = "0.4"
tokenizers = "0.15"
bincode = "1.3"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
rstest = { workspace = true }
test-case = { workspace = true }
fake = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }

# Optional GPU acceleration
[features]
default = ["cpu"]
cpu = []
gpu = ["faiss"]
cuda = ["faiss"]
