[package]
name = "vectorstore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vector embeddings and indexing for semantic search and similarity"

[dependencies]
# Workspace dependencies (temporarily disabled due to compilation issues)
# utils = { path = "../utils" }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ordered-float = "4.2"
lru = "0.12"
regex = { workspace = true }

# Compression and file operations
flate2 = "1.0"
zstd = "0.13"
fs_extra = "1.3"

# Vector operations and ML (temporarily disabled due to version conflicts)
# candle-core = { workspace = true }
# candle-nn = { workspace = true }
# candle-transformers = { workspace = true }
# hf-hub = { workspace = true }
# tokenizers = { workspace = true }
ndarray = "0.16"
# linfa = "0.7"  # Optional ML framework
# linfa-nearest = "0.7"  # Not available

# Vector indexing and search
faiss = { version = "0.12", optional = true }
# hnswlib = { version = "0.1", optional = true }  # Package not found

# Serialization and storage
bincode = "1.3"
rmp-serde = "1.1"
memmap2 = "0.9"
parking_lot = "0.12"

# Performance optimizations
# simd = { version = "0.8", optional = true }  # Version not available
smallvec = "1.11"
bytes = "1.0"

# Async and futures
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

# GPU support (optional)
cuda = { version = "0.3", optional = true }

# Metrics
prometheus = { version = "0.13", optional = true }
once_cell = "1.19"

# Optional backends
dashmap = { workspace = true, optional = true }
rayon = { workspace = true }

[features]
default = ["flat", "hnsw-simple"]
full = ["faiss-backend", "gpu", "metrics", "concurrent"]

# Index implementations
flat = []
hnsw-simple = []
faiss-backend = ["faiss"]
# hnswlib-backend = ["hnswlib"]  # Package not available

# GPU acceleration
gpu = ["cuda"]
gpu-fallback = []

# Performance features
concurrent = ["dashmap"]
# simd-accel = ["simd"]  # SIMD not available
metrics = ["prometheus"]

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

