[package]
name = "wasm-mesh-hero"
version = "0.1.0"
edition = "2021"
description = "Animated network mesh topology for VisionFlow hero section"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.117"
js-sys = "=0.3.94"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "=0.3.94"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Window",
  "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
